--- a/results.html
+++ b/results.html
@@ -1,6 +1,6 @@
 <script>
   (function() {
-    var cx = 'partner-pub-3206689255274961:6448323048';
+    var cx = 'partner-pub-6420736214997570:6382758643';
     var gcse = document.createElement('script');
     gcse.type = 'text/javascript';
     gcse.async = true;
@@ -9,4 +9,4 @@
     s.parentNode.insertBefore(gcse, s);
   })();
 </script>
-<gcse:searchresults-only></gcse:searchresults-only>
+<gcse:searchbox-only></gcse:searchbox-only>
